--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,28 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
+
 * {
+  box-sizing: border-box;
+  padding: 0;
   margin: 0;
 }
 
 body {
-  /*max-width: 800px;*/
+  font-family: 'lato', 'sans-serif';
+  color: #333;
+  line-height: 1.6;
 }
+ul {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+  color: #333;
+}
+
+
+
 
 .container {
   display: flex;
@@ -35,12 +53,54 @@ body {
 
 }
 .box:hover{
-  background:#53a7ea;
+
+  /*background:#53a7ea;*/
   /*flex-grow: 4.3;*/
   /*flex: 10*/
   /*height: 550px !important;*/
   /*width: 550px !important;*/
   /*transition: All 1s ease-in-out;*/
   /*position:relative;*/
+}
+
+
+
+
+.navbar{
+  background-color: #047aed;
+  color: #fff;
+  height: 70px;
+
+}
+.navbar ul{
+  display: flex;
+}
+.navbar a{
+  color: white;
+  padding: 10px;
+  margin: 0 10px;
+}
+.navbar a:hover{
+  border-bottom: 2px white solid;
+}
+.navbar .flex{
+  justify-content: space-between;
+}
+
+.container{
+  max-width: 900px;
+  margin: 0 auto;
+  overflow: auto;
+  border-color: red;
+  border-width: 1px;
+  border-style: solid;
+  padding: 0 20px;
+}
+.flex{
+  display: flex;
+  /*flex-direction: column;*/
+  justify-content: center;
+  align-items: center;
+  height: 100%;
 }
 
