--- a/src/index.css
+++ b/src/index.css
@@ -37,7 +37,7 @@ a {
 .box {
   border-style: solid;
   border-color: #777;
-  border-width: 1;
+  border-width: 1px;
   width: 100px;
   height: 100px;
 
@@ -45,9 +45,9 @@ a {
   padding: 10px 10px;
   margin: 5px;
   border-radius: 15px;
-  /*display: flex;*/
-  /*justify-content: center;*/
-  /*align-items: center;*/
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   transition:all 1s ease;
   /*animation-play-state: running;*/
@@ -56,7 +56,7 @@ a {
 
 }
 .box:hover{
-
+cursor: pointer;
   /*background:#53a7ea;*/
   /*flex-grow: 4.3;*/
   /*flex: 10*/
