--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@ body {
   font-family: 'lato', 'sans-serif';
   color: #333;
   line-height: 1.6;
+  background-color: lightsteelblue;
 }
 ul {
   list-style-type: none;
@@ -29,6 +30,11 @@ a {
   flex-wrap: wrap;
   justify-content: flex-start;
   align-items: center;
+  max-width: 900px;
+  margin: 0 auto;
+  overflow: auto;
+  padding: 0 20px;
+
 
 
 
@@ -55,6 +61,9 @@ a {
   /*flex-grow: 1;*/
 
 }
+.box:active{
+  background-color: yellow;
+}
 .box:hover{
 cursor: pointer;
   /*background:#53a7ea;*/
@@ -70,8 +79,8 @@ cursor: pointer;
 
 
 .navbar{
-  background-color: #047aed;
-  color: #fff;
+  /*background-color: #047aed;*/
+  color: #000;
   height: 70px;
 
 }
@@ -79,7 +88,7 @@ cursor: pointer;
   display: flex;
 }
 .navbar a{
-  color: white;
+  color: #000;
   padding: 10px;
   margin: 0 10px;
 }
@@ -91,13 +100,7 @@ cursor: pointer;
 }
 
 .container{
-  max-width: 900px;
-  margin: 0 auto;
-  overflow: auto;
-  border-color: red;
-  border-width: 1px;
-  border-style: solid;
-  padding: 0 20px;
+
 }
 .flex{
   display: flex;
