--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,16 @@ a {
   /*animation-play-state: running;*/
   /*flex: 1;*/
   /*flex-grow: 1;*/
+  display: flex;
+  flex-direction: column;
+ justify-content: flex-end;
 
+}
+.box p{
+  /*border: 1px red solid;*/
+}
+.box .name{
+  font-size: 13px;
 }
 .box .id{
   /*color: red;*/
@@ -66,6 +75,11 @@ a {
   /*font-size: 8px;*/
   font-weight: bold;
 }
+.box .product{
+   /*color: red;*/
+   /*font-size: 8px;*/
+   font-style: italic;
+ }
 .box:active{
   background-color: yellow;
 }
