--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ a {
   flex-wrap: wrap;
   justify-content: flex-start;
   align-items: center;
-  max-width: 900px;
+  /*max-width: 900px;*/
   margin: 0 auto;
   overflow: auto;
   padding: 0 20px;
