--- a/src/index.css
+++ b/src/index.css
@@ -85,7 +85,7 @@ a {
 }
 .box:hover{
 cursor: pointer;
-  /*background:#53a7ea;*/
+  background:#53a7ea;
   /*flex-grow: 4.3;*/
   /*flex: 10*/
   /*height: 550px !important;*/
