--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
 :root {
-  --first-color : #f9f7f7;
+  /*--first-color : #f9f7f7;*/
+  --first-color : #2A2A37;
   --second-color : #dbe2ef;
   --third-color: #3f72af;
 }
@@ -15,9 +16,12 @@
 
 body {
   font-family: 'lato', 'sans-serif';
-  color: #333;
+  color: white;
   line-height: 1.6;
-  background-color: var(--first-color);
+background: linear-gradient(240deg, rgba(75,73,93,1) 0%, rgba(40,43,52,1) 25%)
+  /*background-color: var(--first-color);*/
+  /*background: transparent linear-gradient(126deg, #252432 0%, #1D1D27 100%) 0% 0% no-repeat padding-box;*/
+
 }
 ul {
   list-style-type: none;
@@ -27,10 +31,6 @@ a {
   text-decoration: none;
   color: #333;
 }
-
-
-
-
 .container {
   display: flex;
   flex-wrap: wrap;
@@ -40,33 +40,21 @@ a {
   margin: 0 auto;
   overflow: auto;
   padding: 0 20px;
-
-
-
-
 }
 
 .box {
   border-style: solid;
-  border-color: #777;
+  border-color: white;
   border-width: 1px;
   width: 150px;
   height: 150px;
-
-  /*margin: 10px 10px;*/
   padding: 10px 10px;
   margin: 5px;
   border-radius: 15px;
-
   transition:all 1s ease;
-  /*animation-play-state: running;*/
-  /*flex: 1;*/
-  /*flex-grow: 1;*/
   display: flex;
   flex-direction: column;
- justify-content: flex-end;
-  background-color: var(--second-color);
-
+  justify-content: flex-end;
 }
 
 .overrideBoxBig {
@@ -74,38 +62,26 @@ a {
   height: 300px;
 }
 
-.box p{
-  /*border: 1px red solid;*/
-}
+
 .box .name{
   font-size: 13px;
 }
 .box .id{
-  /*color: red;*/
   font-size: 8px;
 }.box .mass{
-  /*color: red;*/
-  /*font-size: 8px;*/
   font-weight: bold;
 }
 .box .product{
-   /*color: red;*/
-   /*font-size: 8px;*/
    font-style: italic;
  }
 .box:active{
-  background-color: yellow;
+  border-color: #0C8BFC;
+  outline: none
 }
 .box:hover{
 cursor: pointer;
-  background-color: var(--third-color);
-  /*background:#53a7ea;*/
-  /*flex-grow: 4.3;*/
-  /*flex: 10*/
-  /*height: 550px !important;*/
-  /*width: 550px !important;*/
-  /*transition: All 1s ease-in-out;*/
-  /*position:relative;*/
+  /*border-color: #0C8BFC;*/
+  border-width: 5px;
 }
 
 
@@ -113,7 +89,7 @@ cursor: pointer;
 
 .navbar{
   /*background-color: #047aed;*/
-  color: #000;
+  color: white;
   height: 70px;
   margin-right: 100px;
   /*padding-right: 50px;*/
@@ -123,12 +99,13 @@ cursor: pointer;
   display: flex;
 }
 .navbar a{
-  color: #000;
+  /*color: #000;*/
+  color: white;
   padding: 10px;
   margin: 10px 10px;
 }
 .navbar a:hover{
-  border-bottom: 2px var(--third-color) solid;
+  border-bottom:4px white solid;
   /*border-bottom: 4px black solid;*/
   /*background-color:var(--third-color) ;*/
 }
