--- a/src/index.css
+++ b/src/index.css
@@ -51,7 +51,7 @@ a {
   padding: 10px 10px;
   margin: 5px;
   border-radius: 15px;
-  transition:all 1s ease;
+  transition:all 0.5s ;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
