--- a/src/index.css
+++ b/src/index.css
@@ -158,4 +158,8 @@ p.id.small {
 .navbar .flex {
     justify-content: space-between;
 }
-
+#gauge {
+    height: 20%;
+    width: 20%;
+    color: white;
+}
