--- a/src/index.css
+++ b/src/index.css
@@ -60,6 +60,49 @@ a {
     /*overflow: auto;*/
     /*padding: 0 20px;*/
 }
+.grid-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 100px 1fr 1fr 1fr 100px;
+    /*gap: 10px 10px;*/
+    min-height: 0;  /* NEW */
+    min-width: 0;   /* NEW; needed for Firefox */
+    grid-template-areas:
+    "Grid-Hader Grid-Hader Grid-Hader"
+    "Icon . Icon2"
+    "Data1 Data2 Data3"
+    "Data4 Data5 Data6"
+    "Grid-Footer Grid-Footer Grid-Footer";
+}
+
+
+
+.Grid-Hader { grid-area: Grid-Hader;
+    /*justify-content: left !important;*/
+    justify-content: flex-end !important;
+}
+.grid-container div{
+    border: 1px grey solid;
+    border-radius: 10px;
+    margin: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.Icon { grid-area: Icon;
+
+}
+.Grid-Footer { grid-area: Grid-Footer; }
+.Data1 { grid-area: Data1; }
+.Data2 { grid-area: Data2; }
+.Data3 { grid-area: Data3; }
+.Data4 { grid-area: Data4; }
+.Data5 { grid-area: Data5; }
+.Data6 { grid-area: Data6; }
+.Icon2 { grid-area: Icon2; }
+
+
 
 .box {
     border-style: solid;
@@ -179,4 +222,10 @@ p.id.small {
     height: 20%;
     width: 20%;
     color: white;
+}
+
+.ScaleSVG{
+    width: 100px;
+    height: 100px;
+    margin: auto;
 }
